Add Color Samples and Expenses buttons to PM and Admin dashboards
- PM dashboard: Added 'Nuevo Gasto' and 'Ver Gastos' buttons for expense management
- Admin dashboard: Added 'Muestras de Color' button for color sample access
- Both dashboards now have complete access to color samples and expense features

--- a/core/templates/core/dashboard_admin.html
+++ b/core/templates/core/dashboard_admin.html
@@ -271,6 +271,12 @@
             <span>{% trans "Financial" %}</span>
           </a>
         </div>
+        <div class="col-6 col-md-3">
+          <a href="{% url 'pm_select_project' 'colors' %}" class="btn btn-outline-success w-100 d-flex flex-column align-items-center p-3 small">
+            <i class="bi bi-palette fs-4 mb-2"></i>
+            <span>{% trans "Muestras de Color" %}</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
